# GameStudy

./: .prettierignore  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
.github/workflows/: rust.yml
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: armor.rs  character.rs  enemies.rs  main.rs  player.rs  quiz.rs  weapon.rs
src-tauri/src/armor/: armor_damage_negation.rs  armor_info.rs
src-tauri/src/character/: character_info.rs  classes.rs  stats.rs
src-tauri/src/enemies/: enemies_info.rs
src-tauri/src/player/: classes.rs  inventory.rs  player_health.rs  player_info.rs  stats.rs
src-tauri/src/quiz/: quiz_info.rs
src-tauri/src/weapon/: weapon_damage.rs  weapon_info.rs  weapon_types.rs
src-tauri/test/: output.quiz
src/Character/: Inventory.tsx
src/Interfaces/: Armor.ts  Character.ts  CharacterClass.ts  ClassType.ts  Classes.ts  Inventory.ts  Player.ts  Stats.ts  Weapon.ts
src/Pages/: BattlePage.tsx  CharacterCreation.tsx  MenuPage.tsx  QuestionMakerPage.tsx
src/components/: Gameview.tsx
src/components/AnswerBox/: AnswerBtn.tsx
src/components/Character/: Inventory.tsx
src/components/CharacterCreation/: ClassSelectionModal.tsx  PortraitViewer.tsx
src/components/Inventory/: DraggableItem.tsx  DroppableSlot.tsx  Equipment.tsx  SortableSlot.tsx  inventory.tsx
src/components/QuestionBox/: Question.tsx
src/types/: ClassType.ts  Item.ts  ItemTypes.ts
src/utils/: Classes.ts  dbUtils.ts
src/utils/GameActions/: Health.ts
(+7 files in other folders)
