[package]
name = "gamestudy"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-rc.0", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc.0", features = [] }
tauri-plugin-shell = "2.0.0-rc.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3.3"
dirs-next = "2.0.0"
rust-crypto = "0.2.36"
rand = "0.8.4"
tauri-plugin-fs = "2.0.0-rc.0"
dotenv = "0.15.0"
hex = "0.4.3"

[dependencies.tauri-plugin-sql]
features = ["sqlite"] # or "postgres", or "mysql"
version = "2.0.0-rc.0"
